# 20sim-Xenomai-RTFramework

./: CMakeLists.txt  Doxyfile  README.md
Controller/: Controller.cpp  Controller.h  Controller.info  Controller_tokens.xml  test_Controller.cpp
Controller/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
Controller/project/VS2005/: Controller.sln  Controller.vcproj
Controller/project/VS2008/: Controller.sln  Controller.vcproj
Controller/project/VS2010/: Controller.sln  Controller.vcxproj
Controller/project/VS2012/: Controller.sln  Controller.vcxproj
Controller/project/VS2013/: Controller.sln  Controller.vcxproj  Controller.vcxproj.filters
Controller/project/VS2015/: Controller.sln  Controller.vcxproj
Controller/project/VS2017/: Controller.sln  Controller.vcxproj
Controller/project/VS2019/: Controller.sln  Controller.vcxproj
Plant/: Plant.cpp  Plant.h  Plant.info  Plant_tokens.xml  test_Plant.cpp
Plant/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
Plant/project/VS2005/: Plant.sln  Plant.vcproj
Plant/project/VS2008/: Plant.sln  Plant.vcproj
Plant/project/VS2010/: Plant.sln  Plant.vcxproj  Plant.vcxproj.filters
Plant/project/VS2012/: Plant.sln  Plant.vcxproj
Plant/project/VS2013/: Plant.sln  Plant.vcxproj
Plant/project/VS2015/: Plant.sln  Plant.vcxproj
Plant/project/VS2017/: Plant.sln  Plant.vcxproj
Plant/project/VS2019/: Plant.sln  Plant.vcxproj
Submodel1/: Submodel1.cpp  Submodel1.h  test_Submodel1.cpp
Submodel1/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
docs/html/: Controller_2common_2EulerAngles_8h_source.html  Controller_2common_2MotionProfiles_8h_source.html  Controller_2common_2xxfuncs_8h_source.html  Controller_2common_2xxinteg_8h_source.html  Controller_2common_2xxinverse_8h_source.html  Controller_2common_2xxmatrix_8h_source.html  Controller_2common_2xxmodel_8h_source.html  Controller_2common_2xxtypes_8h_source.html  Controller_8h_source.html  Plant_2common_2EulerAngles_8h_source.html  Plant_2common_2MotionProfiles_8h_source.html  Plant_2common_2xxfuncs_8h_source.html  Plant_2common_2xxinteg_8h_source.html  Plant_2common_2xxinverse_8h_source.html  Plant_2common_2xxmatrix_8h_source.html  Plant_2common_2xxmodel_8h_source.html  Plant_2common_2xxtypes_8h_source.html  Plant_8h_source.html  annotated.html  classController-members.html  classController.html  classDiscrete-members.html  classDiscrete.html  classEuler-members.html  classEuler.html  classIDDPconnection-members.html  classIDDPconnection.html  classIntegrationMethod-members.html  classIntegrationMethod.html  classPlant-members.html  classPlant.html  classRungeKutta2-members.html  classRungeKutta2.html  classRungeKutta4-members.html  classRungeKutta4.html  classSubmodel20sim-members.html  classSubmodel20sim.html  classXDDPconnection-members.html  classXDDPconnection.html  classes.html  (+31 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  classController.eps  classController.tex  classDiscrete.eps  classDiscrete.tex  classEuler.eps  classEuler.tex  classIDDPconnection.eps  classIDDPconnection.tex  classIntegrationMethod.eps  classIntegrationMethod.tex  classPlant.eps  classPlant.tex  classRungeKutta2.eps  classRungeKutta2.tex  classRungeKutta4.eps  classRungeKutta4.tex  classSubmodel20sim.eps  classSubmodel20sim.tex  classXDDPconnection.eps  classXDDPconnection.tex  classinterProcessQueue.tex  classxenoCommunication.eps  classxenoCommunication.tex  classxenoGPIO.tex  hierarchy.tex  md_README.tex  refman.tex  structXXMatrix.tex  unionstr2dbl.tex
include/: communicationClass.cpp  communicationClass.h  gpioClass.cpp  gpioClass.h  multiCommClass.cpp  multiCommClass.h  runnableClass.cpp  runnableClass.h  superThread.cpp  superThread.h  threadClass.cpp  threadClass.h
src/: classTest.cpp  logging.cpp  main.cpp  multipleModels.cpp  ownThreadTest.cpp  ownThreadTest_old.cpp  real-time.cpp  receivetest.cpp  test.cpp
src/jiwy/: logging.cpp  main.cpp  setpoint.cpp
